2008-02-02 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/GrampsDb/_WriteGedcom.py
	* src/plugins/WriteGeneWeb.py
	0001414: "Living" is not translated in GEDCOM export file 

2008-01-23 Brian Matherly <brian@gramps-project.org>
           Benny Malengier <benny.malengier@gramps-project.org>: backport trunk
	* src/ReportBase/_StyleComboBox.py:
	* src/ReportBase/_StyleEditor.py:
	Modify the style editor to properly handle unicode style names.

2008-01-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPerson.py: callback for gallerytab no longer needed

2008-01-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/Check.py: bug (buglist) wrong method call

2008-01-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/docgen/SvgDrawDoc.py: backport patch so that text in svgbox shows

2008-01-18 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDb/_WriteGedcom.py : #1621 use os.path.samefile in write_photo

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_RelationView.py: isue #1605, not twice in same family

2008-01-13  Stéphane Charette <stephanecharette@gmail.com>
	* configure.in: released 2.2.10; update version number to 2.2.11

2008-01-06  Stéphane Charette  <stephanecharette@gmail.com>
	* NEWS: release candidate for version 2.2.10 "Lemon Curry?"

2008-01-06  Stéphane Charette  <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: resize and link to very large images,
	include sources (when available) for media objects

2008-01-04 Jerome Rapinat  <romjerome@yahoo.fr>
	* src/DateHandler/_Date_fr.py : typo

2008-01-03 Benny Malengier <benny.malengier@gramps-project.org>
	* data/gramps.desktop.in: list more mime types, item 851

2008-01-03 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDb/_WriteXML.py: wrong escape of &, bug 1430

2008-01-03 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/RelCalc.py: managed window error, bug 1499
