@@ -104,6 +104,7 @@ class Bookmarks :
         if self.active != DISABLED:
             self.uistate.uimanager.remove_ui(self.active)
             self.uistate.uimanager.remove_action_group(self.action_group)
+            self.action_group = gtk.ActionGroup('Bookmarks')
             self.active = DISABLED
 
     def redraw_and_report_change(self):
